--- a/ECE-5480-VLSI-Testing/lecture-notes/1-6-26.md
+++ b/ECE-5480-VLSI-Testing/lecture-notes/1-6-26.md
@@ -1,1 +1,136 @@
 # Lecture 1
+
+## Exercise  
+
+XOR truth Table
+
+|A B|X|
+|---|-|
+|0 0|0|
+|0 1|1|
+|1 0|1|
+|1 1|0|
+
+Assume line a has a stuck at 1 error
+
+|A B|X|
+|---|-|
+|0 0|1|
+|0 1|0|
+|1 0|1|
+|1 1|0|
+
+this becomes NOT B
+
+## This course
+
+* Understand the impact of faults caused by manufacturing defects
+  * could also be caused by hardware trojans
+* how do we test for faults
+  * make chips reliable and secure
+* How much time, energy, and cost should be invested in testing
+* this class covers test development and execution
+  
+### Motivation
+
+* Moore's Law (again...)
+  * die's could have millions of transistors in a 1cm square
+  * impossible to probe every point
+  * must just test inputs and outputs
+* manufacturing cost per transistor declining over time
+* testing cost per transistor increasing over time
+* testing tools and methods need to be smarter and more efficient
+
+## Grading
+
+* Homework and Labs
+  * Theory Problems
+  * Tetramax tool assignments
+  * no late assignments (extensions are possible)
+* Midterm in class
+* Take Home Final
+* Mini Project
+* Participation
+  * Answer Questions in class
+  * Interact!!!
+---
+* Labs (contd.)
+  * Use tools installed On EL103 computers
+  * **NO PERSISTENT STORAGE**
+
+## Design and Fabs
+
+* Chips are desgined by Design house
+* they are built and packaged by a Fab
+
+---
+
+* USA is a leader in chip design
+* USA has very few fabs
+
+
+
+## Tests
+
+* Tests must be comprehensive but not too long
+* must be planned before any fabrication
+* model and predict possible defects in the process
+* develop logic simulator(testbench)
+* develop fault simulator and test generator
+* methods to quantify test efficiency
+
+## Verification vs Testing
+
+### definitions
+* Design Synthesis
+  * given a description of a circuit, design a physical circuit following that design
+* Verification
+  * Predictive analysis to ensure that the synthesized design will behave as intended
+* Test
+  * ensure that the physical device has no manufacturing defects
+
+### Exercise: List differences
+* verification
+  * ensures design is functions correctly
+* testing 
+  * ensures the design was executed correctly
+
+## Ideal Vs Actual Test
+
+### Problems with ideal tests
+* detect every possible defect
+* pass all functionally good devices
+* fail every single fault
+* Incredibly difficult to generate for many real defects
+* Computationally prohibitive
+
+### Real Tests
+* does not cover all faults
+* some good chips may fail
+* some defective chips pass
+* the number of passing defective chips is called the *defect level*
+  
+### Testing as a Filter Process
+* some good chips fail the test(yield loss)
+* some bad chips pass the test (defect level)'
+
+## levels of testing
+* chip/chiplet(single die)
+* board(multiple dies)
+* system(mulitple boards)
+---
+Rule of 10
+* every level costs 10x more than the lower level to test
+
+---
+lower levels
+* Transistor
+* Gate
+* RTL
+* Architecture
+
+### This class
+* Chip level
+* Gate Level
+
+Focus on netlists
